--- a/css/mockup-style.css
+++ b/css/mockup-style.css
@@ -17,6 +17,10 @@
 /****************************
 * BOOTSTRAP CUSTOM OVERRIDES
 *****************************/
+h3, .h3 {
+	font-size: 2.5rem;
+}
+
 .lead {
 	font-size: initial;
 	font-weight: 900;
@@ -133,12 +137,18 @@ section#welcome .jumbotron h1 {
 	display: inline-block;
 	font-weight: 900;
 	padding: 2rem;
-	text-shadow: 8px 8px orchid;
+	text-shadow: 0.075em 0.075em 0 orchid;
 	text-transform: uppercase;
 }
 
 section#welcome .jumbotron p.lead {
 	color: yellow;
+}
+
+@media only screen and (min-width: 768px) {
+	section#welcome .jumbotron h1 {
+		font-size: 4rem;
+	}
 }
 
 @media only screen and (min-width: 992px) {
@@ -158,7 +168,13 @@ section#about h3 {
 	font-family: 'Bungee Shade', 'Times New Roman', serif;
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 768px) {
+	section#about h3 {
+		font-size: 3.5rem;
+	}
+}
+
+@media only screen and (min-width: 1200px) {
 	section#about h3 {
 		font-size: 4rem;
 	}
@@ -173,7 +189,13 @@ section#gallery {
 
 section#gallery h3 {
 	font-family: 'Bungee Shade', 'Times New Roman', serif;
-	text-shadow: -3px 3px 0 yellow;
+	text-shadow: -0.05em 0.05em 0 yellow;
+}
+
+@media only screen and (min-width: 768px) {
+	section#gallery h3 {
+		font-size: 3.5rem;
+	}
 }
 
 @media only screen and (min-width: 992px) {
@@ -195,6 +217,12 @@ section#contact .border {
 
 section#contact h3 {
 	font-family: 'Bungee Shade', 'Times New Roman', serif;
+}
+
+@media only screen and (min-width: 768px) {
+	section#contact h3 {
+		font-size: 3rem;
+	}
 }
 
 @media only screen and (min-width: 992px) {
